opam-version: "2.0"
synopsis: "41052 Advanced Algorithms Assignment 1: Topological Sort"
version: "1.0"
maintainer: "oliversalman1@gmail.com"
authors: ["Oliver Salman"]
homepage: "idk"
bug-reports: "idk"
dev-repo: "git+https://github.com/os12345678/DSA.git"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "dune" { >= "3.4.1"}
  "odoc"  {= "2.1.1"}
  "bisect_ppx" {= "2.8.1"}
  "ppx_jane"{= "v0.15.0"}
  "reason"  { ="3.8.1"}
  "odoc-parser" {= "1.0.1"}
]